@@ -9,7 +9,7 @@
 #
 # Copyright (c) 1998, 1999 Henry Spencer.  All rights reserved.
 #
-# RCS: @(#) $Id: reg.test,v 1.16.2.3 2004/11/27 05:44:13 dgp Exp $
+# RCS: @(#) $Id: reg.test,v 1.16.2.4 2007/12/18 11:23:16 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -1129,6 +1129,19 @@ test reg-33.11 {Bug 840258} {
     regsub {(^|[\n\r]+)\.*\?<.*?(\n|\r)+} \
             "TQ\r\n.?<5000267>Test already stopped\r\n" {} tmp
 } 1
+
+test reg-33.12 {Bug 1810264 - bad read} {
+    regexp {\3161573148} {\3161573148}
+} 0
+test reg-33.13 {Bug 1810264 - infinite loop} {
+    regexp {($|^)*} {x}
+} 1
+test reg-33.14 {Bug 1810264 - super-expensive expression} {
+    set start [clock seconds]
+    regexp {(x{200}){200}$y} {x}
+    set time [expr {[clock seconds] - $start}]
+    expr {$time < 5 ? "ok" : "Complex RE took $time seconds - bad!"}
+} ok
 
 # cleanup
 ::tcltest::cleanupTests
